devlink/OnboardingBirthdays.module.css
/* ... */
@media screen and (max-width: 479px) {
  .margin-bottom.margin-custom10 {
    margin-bottom: 6rem;
  }
}

.margin-custom1 {
  margin: 1.5rem;
}

.margin-xhuge {
  margin: 8rem;
}

@media screen and (max-width: 991px) {
  .margin-xhuge {
    margin: 6rem;
  }
}

@media screen and (max-width: 767px) {
  .margin-xhuge {
    margin: 4rem;
  }
}

.margin-bottom.margin-custom4 {
  margin-bottom: 4rem;
}

@media screen and (max-width: 479px) {
  .margin-bottom.margin-custom4 {
    margin-bottom: 2rem;
  }
}

.margin-bottom.margin-custom2 {
  overflow: hidden;
  line-height: 100%;
}

@media screen and (max-width: 479px) {
  .margin-bottom.margin-custom2 {
    margin-bottom: 2rem;
  }
}

.margin-bottom.margin-custom2.personal {
  text-align: center;
}

@media screen and (max-width: 479px) {
  .margin-bottom.margin-custom2.personal {
    text-align: center;
  }
}

.margin-bottom.margin-custom2.last {
  margin-bottom: 0rem;
}

.margin-bottom.margin-custom2.over-vis {
  overflow: visible;
}

@media screen and (max-width: 479px) {
  .margin-bottom.margin-custom2.over-vis {
    margin-bottom: 1.5rem;
  }
}

.margin-bottom.margin-custom3 {
  position: relative;
  z-index: 1;
  overflow: hidden;
}

@media screen and (max-width: 479px) {
  .margin-bottom.margin-custom3 {
    margin-bottom: 2rem;
  }
}

@media screen and (max-width: 479px) {
  .margin-bottom.margin-xhuge {
    margin-bottom: 5rem;
  }
}

.margin-bottom.margin-custom1 {
  margin-bottom: 1rem;
}

@media screen and (max-width: 479px) {
  .margin-bottom.margin-custom1 {
    margin-bottom: 0.5rem;
  }
}

@media screen and (max-width: 479px) {
  .margin-bottom.margin-huge {
    margin-bottom: 2rem;
  }
}

.margin-huge {
  margin: 6rem;
}

@media screen and (max-width: 991px) {
  .margin-huge {
    margin: 5rem;
  }
}

@media screen and (max-width: 767px) {
  .margin-huge {
    margin: 3.5rem;
  }
}

.text-align-center {
  text-align: center;
}

.margin-bottom.margin-custom5 {
  margin-bottom: 5rem;
}

@media screen and (max-width: 479px) {
  .margin-bottom.margin-custom5 {
    margin-bottom: 3rem;
  }
}

.margin-bottom.margin-custom3 {
  position: relative;
  z-index: 1;
  overflow: hidden;
}

@media screen and (max-width: 479px) {
  .margin-bottom.margin-custom3 {
    margin-bottom: 2rem;
  }
}

.onbording_heading {
  line-height: 140%;
  font-weight: 700;
}

@media screen and (max-width: 479px) {
  .onbording_heading {
    font-size: 2rem;
    line-height: 140%;
  }
}

@media screen and (max-width: 479px) {
  .onbording_heading.italic {
    font-style: italic;
  }
}

@media screen and (max-width: 479px) {
  .onbording_heading.padding_left {
    padding-left: 1rem;
    font-size: 2rem;
  }
}

.onbording_content {
  display: flex;
  width: 100%;
  flex-direction: column;
  justify-content: center;
  flex-wrap: nowrap;
  align-items: center;
}

@media screen and (max-width: 479px) {
  .onbording_content {
    margin-bottom: 1rem;
    justify-content: space-between;
    align-items: flex-start;
  }
}

.onbording_content.confirm {
  margin-bottom: 5.5rem;
}

@media screen and (max-width: 479px) {
  .onbording_content.confirm {
    margin-bottom: 6.5rem;
    justify-content: space-between;
    align-items: flex-start;
  }
}

.onbording_content.names {
  margin-bottom: 1.5rem;
}

@media screen and (max-width: 479px) {
  .onbording_content.names {
    margin-bottom: 1rem;
  }
}

.onbording_content.processing {
  margin-bottom: 1rem;
}

.onbording_content.reflection1 {
  position: relative;

  margin-bottom: 3rem;
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  justify-content: center;
  align-items: center;
}

.birth_content-wrapper {
  display: flex;
  width: 60%;
  margin-bottom: 3rem;
  padding: 1.5rem 2rem 2rem;
  flex-direction: column;
  justify-content: flex-start;
  flex-wrap: nowrap;
  align-items: flex-start;

  border-radius: 1.5rem;

  background-color: white;
}

@media screen and (max-width: 479px) {
  .birth_content-wrapper {
    width: 100%;
    margin-bottom: 2rem;
    padding-right: 1rem;
    padding-left: 1rem;
    border-radius: 1rem;
  }
}

.parent_details-wrapper {
  margin-bottom: 2rem;
}

@media screen and (max-width: 479px) {
  .parent_details-wrapper {
    margin-bottom: 1rem;
  }
}

.names_form-heading {
  font-family: Quicksand;
  font-size: 2rem;
  font-weight: 700;
}

@media screen and (max-width: 479px) {
  .names_form-heading {
    font-size: 1.5rem;
  }
}

.span_italic {
  font-size: 1.8rem;
  font-style: italic;
  font-weight: 400;
}

@media screen and (max-width: 479px) {
  .span_italic {
    font-size: 1.2rem;
  }
}

.text-color-alternate {
  color: #fcbd94;
}

.parent_form {
  width: 25rem;
  margin-bottom: 0px;
  padding-left: 0.3rem;
}

.text-block-5 {
  margin-bottom: 5px;
  font-family: Quicksand;
  font-size: 12px;
}

.input_form-wrapper {
  position: relative;

  display: flex;
  margin-bottom: 1rem;
  justify-content: flex-start;
  align-items: center;

  font-family: Quicksand;
}

.input_form-wrapper.radio {
  display: block;
  margin-bottom: 0.5rem;
}

@media screen and (max-width: 479px) {
  .input_form-wrapper.radio {
    margin-bottom: 0.5rem;
  }
}

.input_form-wrapper.last {
  position: relative;
  display: block;
}

@media screen and (max-width: 479px) {
  .input_form-wrapper.last {
    margin-bottom: 0.8rem;
  }
}

.input_fild {
  position: static;

  width: 100%;
  margin-bottom: 0px;
  padding: 0rem 0rem 0rem 1rem;

  border: 1px none black;
  border-radius: 1rem;

  background-color: hsla(0, 0.00%, 96.22%, 1.00);

  font-family: Quicksand;
  color: #333;
  font-size: 1.5rem;
}

.input_fild::placeholder {
  color: #333;
}

@media screen and (max-width: 479px) {
  .input_fild {
    border-radius: 0.5rem;
    font-size: 1.2rem;
  }
}

.reflection_radio-fild {
  position: relative;
  z-index: 1;

  display: flex;
  margin-bottom: 2rem;
  padding-left: 0px;
  justify-content: flex-start;
  align-items: center;
}
/* ... */

